# polykit

./: .gitignore  CLAUDE.md  Cargo.toml  estream-component.toml  estream.toml
.es/: id_map.json
.es/refs/heads/: main
.github/epics/: EPIC_POLYKIT_CE_APP_GRAPH.md  EPIC_POLYKIT_FASTLANG_REFACTOR.md
circuits/fl/: polykit_app_graph.fl  polykit_blind_telemetry.fl  polykit_blinded_billing.fl  polykit_bridge.fl  polykit_ci.fl  polykit_cognitive.fl  polykit_collaboration.fl  polykit_compliance.fl  polykit_delta_curate.fl  polykit_governance.fl  polykit_identity.fl  polykit_li_effects.fl  polykit_media.fl  polykit_metering.fl  polykit_noise_filter.fl  polykit_platform.fl  polykit_portal.fl  polykit_profile.fl  polykit_rate_limiter.fl  polykit_regional_eu.fl  polykit_regional_us.fl  polykit_sanitize.fl  polykit_sensor.fl  polykit_sme.fl  polykit_studio_document.fl  polykit_studio_graph.fl  polykit_wallet.fl  polykit_zero_linkage.fl  qkit_app_graph.fl  qkit_blind_telemetry.fl  qkit_blinded_billing.fl  qkit_bridge.fl  qkit_ci.fl  qkit_cognitive.fl  qkit_collaboration.fl  qkit_compliance.fl  qkit_delta_curate.fl  qkit_governance.fl  qkit_identity.fl  qkit_li_effects.fl  (+16 more)
circuits/fl/apps/: polykit_blind_relay.fl  polykit_classified_fusion.fl  polykit_crdt_sync.fl  polykit_media_stream.fl  qkit_blind_relay.fl  qkit_classified_fusion.fl  qkit_crdt_sync.fl  qkit_media_stream.fl
circuits/fl/graphs/: polykit_metering_graph.fl  polykit_subscription_lifecycle.fl  polykit_user_graph.fl  qkit_metering_graph.fl  qkit_subscription_lifecycle.fl  qkit_user_graph.fl
circuits/legacy/polykit-eslm-classify/: circuit.escir.yaml
circuits/legacy/polykit-identity/: circuit.escir.yaml
circuits/legacy/polykit-rate-limiter/: circuit.escir.yaml
circuits/legacy/polykit-sanitize/: circuit.escir.yaml
circuits/polykit-console/: console.fl  estream-component.toml
circuits/polykit-eslm-classify/: eslm_classify.fl  estream-component.toml
circuits/polykit-identity/: estream-component.toml  identity.fl
circuits/polykit-metering/: circuit.escir.yaml  estream-component.toml  metering.fl
circuits/polykit-rate-limiter/: estream-component.toml  rate_limiter.fl
circuits/polykit-sanitize/: estream-component.toml  sanitize.fl
circuits/polykit-telemetry/: circuit.escir.yaml  estream-component.toml  telemetry.fl
circuits/qkit-console/: console.fl  estream-component.toml
circuits/qkit-eslm-classify/: eslm_classify.fl  estream-component.toml
circuits/qkit-identity/: estream-component.toml  identity.fl
circuits/qkit-metering/: estream-component.toml  metering.fl
circuits/qkit-rate-limiter/: estream-component.toml  rate_limiter.fl
circuits/qkit-sanitize/: estream-component.toml  sanitize.fl
circuits/qkit-telemetry/: estream-component.toml  telemetry.fl
crates/polykit-console/: Cargo.toml
crates/polykit-console/src/: demo.rs  event_bus.rs  governance.rs  lib.rs  observability.rs  rbac.rs  widget_data.rs
crates/polykit-core/: Cargo.toml
crates/polykit-core/src/: classification.rs  crypto.rs  error.rs  identity.rs  lib.rs  metering.rs  wire.rs
crates/polykit-eslite/: Cargo.toml
crates/polykit-eslite/src/: lib.rs  migrations.rs  query.rs
crates/polykit-graph/: Cargo.toml
crates/polykit-graph/src/: csr.rs  lib.rs
crates/polykit-sanitize/: Cargo.toml
crates/polykit-sanitize/src/: audit.rs  lib.rs  transform.rs
crates/polykit-wasm/: Cargo.toml
crates/polykit-wasm/src/: lib.rs
crates/qkit-console/: Cargo.toml
crates/qkit-console/src/: event_bus.rs  governance.rs  lib.rs  observability.rs  rbac.rs  widget_data.rs
crates/qkit-core/: Cargo.toml
crates/qkit-core/src/: classification.rs  error.rs  identity.rs  lib.rs
crates/qkit-eslite/: Cargo.toml
crates/qkit-eslite/src/: lib.rs  schema.rs  sync.rs
crates/qkit-graph/: Cargo.toml
crates/qkit-graph/src/: overlay.rs  series.rs
crates/qkit-sanitize/: Cargo.toml
crates/qkit-sanitize/src/: detect.rs
crates/qkit-wasm/: Cargo.toml
crates/qkit-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  ESTREAM_FEEDBACK.md  ESTREAM_GETTING_STARTED.md  FASTLANG_REFACTOR_PLAN.md
specs/: PLATFORM_KEY_SECURITY.md  POLYKIT_CE_APP_GRAPH_SPEC.md  POLY_INCOGNITO.md  SPARK_POLY_IDENTITY.md
