[workspace]
resolver = "2"
members = [
    "crates/polykit-core",
    "crates/polykit-eslite",
    "crates/polykit-console",
    "crates/polykit-sanitize",
    "crates/polykit-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/polylabs-dev/polykit"

[workspace.dependencies]
# eStream platform (v0.8.1)
estream-kernel = { git = "https://github.com/polyquantum/estream-io", branch = "main", features = ["ml-dsa-87", "ml-kem-1024", "vrf", "metering", "telemetry"] }
estream-escir = { git = "https://github.com/polyquantum/estream-io", branch = "main", features = ["codegen", "circuits"] }
estream-spark = { git = "https://github.com/polyquantum/estream-io", branch = "main" }
eslite = { git = "https://github.com/polyquantum/estream-io", branch = "main" }
streamsight = { git = "https://github.com/polyquantum/estream-io", branch = "main" }

# Internal crates
polykit-core = { path = "crates/polykit-core" }
polykit-eslite = { path = "crates/polykit-eslite" }
polykit-console = { path = "crates/polykit-console" }
polykit-sanitize = { path = "crates/polykit-sanitize" }

# Crypto
sha3 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
