[package]
name = "polykit-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph/DAG runtime helpers for PolyKit — CSR operations, overlay queries, series access"

[dependencies]
estream-kernel = { workspace = true }
estream-escir = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
