[package]
name = "qkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SPARK identity, PQ crypto, metering, classification — compiled to WASM via FLIR codegen"

[dependencies]
estream-kernel = { workspace = true }
estream-spark = { workspace = true }
sha3 = { workspace = true }
hkdf = { workspace = true }
aes-gcm = { workspace = true }
serde = { workspace = true }
